Overhauled code for all conditions, and even more codecs